--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,6 +33,25 @@ a {
 
 }
 
+
+.select_bill {
+  color: rgba(0,0,0,5);
+  font-weight: 500;
+  font-size: 15px;
+  width: 100%;
+  height: 60px;
+  border-radius: 10px;
+  background-color: #F7F8F9;
+  outline: none;
+  padding-top: 10px;
+  border: 1px solid rgba(0,0,0,0.1);
+}
+
+.select_bill div {
+  border: none !important;
+  /* background-color: transparent !important; */
+  
+}
 .select_country button {
   border: none;
   outline: none;
