--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,7 +49,8 @@ a {
 
 .select_bill div {
   border: none !important;
-  /* background-color: transparent !important; */
+  margin-top: -1px;
+  /* background-color: #F7F8F9 !important; */
   
 }
 .select_country button {
